2002-07-25  Per Bothner  <per@bothner.com>

	* SlotSet.java (returnSelf):  New field.
	(setFieldReturnObject):  New static final field.
	(apply3, compile, getReturnType):  Handle returnSelf.
	* Invoke.java:  No longer implement Inlineable.
	(compile, getReturnType):  Remove methods.
	(inline):  Enhance, using most of the old logic from compile.
	We can do better type propagation easier this way.

2002-07-21  Per Bothner  <per@bothner.com>

	* InstanceOf.java, Invoke.java, SlotGet.java, SlotSet.java,
	TypeSwitch.java (inline):  Update to take extra ExpWalker parameter.

2002-06-18  Per Bothner  <per@bothner.com>

	* SlotSet.java (getField):  Call Compilation.mangleNameIfNeeded.

2002-06-05  Per Bothner  <per@bothner.com>

	* SlotGet.java (compile):  Convert field type to language type.

	* SlotGet.java (apply2, inline):  Use getInterpreter method.

2002-05-19  Per Bothner  <per@bothner.com>

	* ClassMemberConstraint.java (setup):  Fix name/this.name confusion.

2002-02-12  Per Bothner  <per@bothner.com>

	* ClassMemberConstraint.java (define):  If value is Named,
	handle case where getName() returns null.

	* Invoke.java (applyN):  Use CallContext.getInstance().

2002-01-31  Per Bothner  <per@bothner.com>

	* Invoke.java (inlineClassName):  New static method.
	* Invoke.java:  Implement CanInline.
	(inline): New method calls inlineClassName
	* InstanceOf.java:  Likewise.
	* SlotGet.java:  Likewise.
	* SlotSet.java:  Likewise.

2001-12-24  Per Bothner  <per@bothner.com>

	* TypeSwitch.java:  New class, implements XQuery 'typeswitch'.
	* Makefile.am (java_sources):  Update accordingly.

	* InstanceOf.java (emitIsInstance):  New static helper method.
	(compile):  If type us TypeValue, calls its emitIsInstance method.

2001-11-24  Per Bothner  <per@bothner.com>

	* SlotGet.java (makeGetField):  New method, moved from Expression.

2001-11-21  Per Bothner  <per@bothner.com>

	* ClassMethods.java (getMethods):  Match change in ClassType's