@@ -1,3 +1,8 @@
+2002-08-07  Per Bothner  <per@bothner.com>
+
+	* SlotSet.java (compile):  Handle cals whose 2nd arg is a Field or
+	Method, as created when inlining (make <type> field: value).
+
 2002-07-25  Per Bothner  <per@bothner.com>
 
 	* SlotSet.java (returnSelf):  New field.
